--- a/server.cfg
+++ b/server.cfg
@@ -23,6 +23,10 @@ sv_hostname "FXServer"
 sets sv_projectName "Default FXServer"
 # Set your server's Project Description
 sets sv_projectDesc "A Default FXServer with custom Server.cfg"
+# Set your servers game build
+sv_enforceGameBuild 3095 #mp2023_02 - The Chop Shop
+# Database connection string (Note: after "/"? ensure it links to database like heidi or etc )
+#set mysql_connection_string "mysql://root@localhost/"
 # A valid locale identifier for your server's primary language.>
 # For example "en-US", "fr-CA", "nl-NL", "de-DE", "en-GB", "pt-BR">
 sets locale "root-AQ" 
